--- a/index.html
+++ b/index.html
@@ -131,13 +131,27 @@
         </div>
 
         <!-- Sleek Start Banner -->
-        <div class="start-ribbon" aria-label="Fast start banner">
-          <span class="label">⚡ Start in 60 seconds</span>
-          <span class="line">$1 audit today → 10-min plan tomorrow.</span>
-          <a class="btn gold" href="https://cash.app/93SignatureD/1" target="_blank" rel="noopener">Start for $1</a>
+       <!-- Sleek Start Banner -->
+<div class="start-ribbon" aria-label="Fast start banner">
+  <span class="label">⚡ Start in 60 seconds</span>
+  <span class="line">$1 audit today → 10-min plan tomorrow.</span>
 
-          <a class="btn silver" href="https://calendly.com/your-link/10min" target="_blank" rel="noopener">Quick Call</a>
-        </div>
+  <!-- Cash App (direct pay) -->
+  <a class="btn gold" href="https://cash.app/93SignatureD/1" target="_blank" rel="noopener">
+    Pay $1 via Cash App
+  </a>
+
+  <!-- Audit Form (Stripe + auto thank-you) -->
+  <a class="btn silver" href="audit.html#start">
+    Use Audit Form
+  </a>
+</div>
+
+<!-- Cash App users → still submit the form -->
+<p class="fine" style="margin:10px 0 0">
+  If you use Cash App, please also <a href="audit.html#start">fill out the audit form</a> so we can deliver your audit and send the confirmation page.
+</p>
+
       </div>
     </div>
   </section>
